# BStyle

./: CMakeLists.txt  README.md  run.sh
arch/: PKGBUILD
qml/: ApplicationWindow.qml  Button.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  TextField.qml  ToolButton.qml  ToolTip.qml
qml/animation/: ScaleAnim.qml
qml/util/: CheckIndicator.qml
